--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -19,7 +19,7 @@ body {
 
 body.home {
   background-image: none; /* Remove background image */
-  background-color: olive; /* Set background color to olive */
+  background-color: #60752d; /* Set background color to olive */
 }
 
 #auth-container, #content-container {
@@ -202,7 +202,7 @@ tab-button:hover {
 .tab-content {
   display: none;
   padding-bottom: 60px; /* Add padding to avoid content being hidden behind tabs */
-  background: rgba(255, 255, 255, 0.2); /* Make the background of the tab content more transparent */
+  background: #f6f6f2; /* Make the background of the tab content more transparent */
   width: 100%; /* Ensure the content takes the full width */
   height: calc(100%); /* Ensure the content takes the full height minus the top and bottom margins */
   position: absolute; /* Position the content absolutely */
@@ -240,7 +240,7 @@ tab-button:hover {
   top: 0;
   width: 100%;
   height: 70px; /* Set height to 70px */
-  background-color: olive; /* Set background color to olive */
+  background-color: #60752d; /* Set background color to olive */
   z-index: 1000;
   display: flex;
   justify-content: center;
