--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -194,7 +194,7 @@ a {
 .tab-button {
   background: none;
   border: none;
-  color: wheat;
+  color: #f3e2b8;
   font-size: 20px;
   cursor: pointer;
 
@@ -274,8 +274,8 @@ a {
   font-family: "Paytone One", sans-serif; /* Use a more suitable font */
   font-weight: 400;
   font-style: normal;
-  font-size: 14px; /* Keep font size */
-  color: greenyellow; /* Set font color to gold */
+  font-size: 10px; /* Keep font size */
+  color: #f3e2b8; /* Set font color to gold */
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add shadow effect */
 }
 
