--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -258,9 +258,9 @@ a {
 }
 
 #floating-image {
-  position: fixed;
-  top: 20px;
-  right: 20px;
+  position: fixed; /* Change to fixed to ensure it stays in place */
+  top: 15px; /* Adjust top position */
+  right: 20px; /* Adjust right position */
   width: 40px; /* Set fixed width */
   height: 40px; /* Set fixed height */
   z-index: 1001;
