--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -4,7 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Paytone+One&display=swap');
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Paytone One', sans-serif;
   margin: 10;
   padding: 0;
   background-color: #f4f4f9;
@@ -36,6 +36,7 @@ body.home {
   border-radius: 10px;
   text-align: center;
   margin: 20px; /* Add margin to create space on the sides */
+  color: #60752d; /* Change text color to olive */
 }
 
 form {
@@ -51,7 +52,7 @@ input, button {
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 16px;
-  font-family: 'Roboto', sans-serif; /* Use the Roboto font for inputs and buttons */
+  font-family: 'Paytone One', sans-serif; /* Use the Roboto font for inputs and buttons */
 }
 
 button {
@@ -297,3 +298,6 @@ a {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add shadow effect */
 }
 
+#logout-btn-conta {
+  background-color: #f66d87;
+}
