--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -307,6 +307,25 @@ a {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add shadow effect */
 }
 
+#top-bar-adm {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 70px; /* Set height to 70px */
+  background-color: #f66d87; /* Set background color to olive */
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  font-family: "Paytone One", sans-serif; /* Use a more suitable font */
+  font-weight: 400;
+  font-style: normal;
+  font-size: 10px; /* Keep font size */
+  color: #f3e2b8; /* Set font color to gold */
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Add shadow effect */
+}
+
 #bottom-bar {
   position: fixed;
   bottom: 0;
