--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -376,3 +376,48 @@ a {
 #logout-btn-conta {
   background-color: #f66d87;
 }
+
+#lettuce-progress {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+#progress-bar-container {
+  width: 100%;
+  background-color: #e0e0e0;
+  border-radius: 25px;
+  overflow: hidden;
+  margin: 10px 0;
+}
+
+#progress-bar {
+  width: 0;
+  height: 20px;
+  background-color: #4CAF50;
+  border-radius: 25px;
+  transition: width 0.5s ease-in-out;
+}
+
+#days-left {
+  font-size: 16px;
+  color: #60752d;
+}
+
+#apply-seedling {
+  text-align: center;
+  margin-top: 20px;
+}
+
+#apply-seedling button {
+  background-color: #4CAF50;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  border-radius: 5px;
+}
+
+#apply-seedling button:hover {
+  background-color: #45a049;
+}
