--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -531,8 +531,8 @@ a {
   align-items: center;
   background: rgba(255, 255, 255, 0.7);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  padding: 20px;
-  margin: 20px 0;
+  padding: 10px 20px 20px 20px; /* Reduce top padding */
+  margin: 10px 0; /* Reduce margin to create more space for a list of cards */
   border-radius: 10px;
   position: relative; /* Add relative positioning */
 }
